# rustdirstat

./: .gitignore  Cargo.toml
src/: main.rs
src/gui/: dir_walk.rs  mod.rs  treeview.rs
src/parse_tree/: accum_tree.rs  async.rs  fs_crossing.rs  mod.rs  parallel.rs  parallel2.rs  recurse.rs  serial.rs
