[package]
name = "rustdirstat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ext4 = "0.9.0"
# ntfs = "0.4.0"
# spliter = "0.1.0"
rayon = "1.10.0"

[profile.release]
debug = true

# [target.x86_64-unknown-linux-gnu]
# linker = "/usr/bin/clang"
# rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]